--- a/exercises/TD05_gui/05_gui.ipynb
+++ b/exercises/TD05_gui/05_gui.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# TD 5: Interface graphique\n",
     "\n",
     "\n",
     "Ce [site](http://tkinter.fdex.eu/index.html) recense les méthodes utilisables dans les différents widgets, et permet de retrouver rapidement des informations à leur sujet.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 1. Prise en main\n",
     "\n",
@@ -39,11 +38,42 @@
     "et modifier le programme pour qu'il fonctionne avec cette nouvelle manière de faire.\n",
     "\n",
     "5. Modifier le programme pour que la ligne qui s'affiche devienne verticale tout en conservant les cercles à ses extrémités.\n"
-   ]
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "CANVAS_WIDTH, CANVAS_HEIGHT = 600, 400\n",
+    "\n",
+    "\n",
+    "root = Tk()\n",
+    "\n",
+    "canvas = Canvas(root, width = CANVAS_WIDTH, height = CANVAS_HEIGHT)\n",
+    "\n",
+    "    # Début de votre code\n",
+    "x = CANVAS_WIDTH / 2\n",
+    "y1 = 100\n",
+    "y2 = 300\n",
+    "canvas.create_line(x, y1, x, y2)\n",
+    "canvas.create_oval(x - 50, y1 - 50 , x + 50, y1 + 50)\n",
+    "canvas.create_oval(x - 50, y2 - 50, x + 50, y2+ 50)\n",
+    "canvas.create_oval((x0 + x1) / 2 - 50, y + 50, (x0 + x1) / 2 + 50, y - 50)\n",
+    "    \n",
+    "    # Fin de votre code\n",
+    "\n",
+    "canvas.grid()\n",
+    "root.mainloop()\n",
+    "\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "---\n",
     "\n",
@@ -63,46 +93,100 @@
     "* titre à la fenêtre\n",
     "\n",
     "**Indication:** pour placer un widget sur plusieurs lignes (resp. colonnes), il faut utiliser le paramètre `rowspan` (resp. `columnspan`).\n"
-   ]
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "source": [
+    "import tkinter as tk\n",
+    "import random as rd\n",
+    "\n",
+    "racine = tk.Tk() # Création de la fenêtre racine\n",
+    "CANVAS_WIDTH, CANVAS_HEIGHT = 1, 3\n",
+    "\n",
+    "racine.title(\"Mon dessin\") # ajoute un titre\n",
+    "\n",
+    "def cercle():\n",
+    "    x=rd.randint(0,400)\n",
+    "    y=rd.randint(0,400)\n",
+    "    canvas.create_oval((x,y),(x+100, y+100), fill=couleur_fond)\n",
+    "\n",
+    "def carré():\n",
+    "    x=rd.randint(0,400)\n",
+    "    y=rd.randint(0,400)\n",
+    "    canvas.create_rectangle((x,y), (x+100, y+100), fill = couleur_fond)\n",
+    "\n",
+    "def croix():\n",
+    "    x= rd.randint(0,400)\n",
+    "    y= rd.randint(0,400)\n",
+    "    canvas.create_line((x,y), (x+100, y+100), fill= couleur_fond)\n",
+    "    canvas.create_line((x+100, y), (x, y+100), fill= couleur_fond)\n",
+    "\n",
+    "def couleur():\n",
+    "    global couleur_fond\n",
+    "    couleur_fond = input(\"choisir une couleur\")\n",
+    "\n",
+    "couleur_fond = \"salmon\"\n",
+    "\n",
+    "bouton_cercle = tk.Button(racine, text= \"Cercle\", command=cercle)\n",
+    "bouton_cercle.grid(row= 1, column = 0,) # positionnement du widget\n",
+    "\n",
+    "bouton_carré = tk.Button(racine, text= \"Carré\", command=carré)\n",
+    "bouton_carré.grid(row= 2, column = 0) # positionnement du widget\n",
+    "\n",
+    "bouton_croix = tk.Button(racine, text= \"Croix\", command= croix)\n",
+    "bouton_croix.grid(row= 3, column = 0) # positionnement du widget\n",
+    "\n",
+    "bouton_couleur = tk.Button(racine, text= \"Choisir une couleur\", command= couleur)\n",
+    "bouton_couleur.grid(row= 0, column = 1) # positionnement du widget\n",
+    "\n",
+    "canvas = tk.Canvas(racine, bg=\"black\", height=500, width=500)\n",
+    "canvas.grid(column=1, row=1, rowspan=3)\n",
+    "\n",
+    "racine.mainloop() # Lancement de la boucle principale"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "2. Modifier le style par défaut des boutons, par exemple, en modifiant les couleurs, en ajoutant des marges, en changeant la taille de la police. Pour savoir ce qu'il est possible de faire, consultez le site indiqué au début du sujet."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "3. Dans les paramètres de création du canevas, chercher comment augmenter l'épaisseur du bord du widget, et comment le mettre en relief. Puis faites le."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "4. Ajouter un lien (paramètre `command` du widget Button) entre le bouton `Cercle` et une fonction qui affiche un disque de diamètre 100 en bleu à un endroit choisi au hasard dans le canevas. Le cercle doit être inclu intégralement dans le canevas."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "5. Faites pareil pour le bouton `Carré` qui doit afficher un carré rouge de côté 100, et puis pour `Croix` qui doit afficher une croix jaune inscrite dans un carré de côté 100 (les carrés dont on parle ont leur cotés horizontaux et verticaux)."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "6. Faire en sorte que le bouton `Choisir une couleur` demande une couleur à l'utilisateur dans le terminal. Ensuite, les objets qui s'affichent doivent être de cette couleur, qui peut être modifiée par l'utilisateur autant de fois qu'il le souhaite. Tant que l'utilisateur n'a pas choisi de couleur, la couleur est bleue. On rappelle les couleurs prédéfinies: white, black, red, green, blue, cyan, yellow."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 3. Cible en couleur\n",
     "\n",
@@ -114,11 +198,11 @@
     "\n",
     "Dans l'ordre les couleurs sont blue, green, black, yellow, magenta, red.\n",
     "Vous choisissez la taille d'image et le nombre de cercles que vous voulez. Mais le programme doit afficher une telle figure pour n'importe quelles valeurs choisies.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 4. Couleurs\n",
     "\n",
@@ -126,22 +210,22 @@
     "Les questions qui suivent sont à traiter dans un fichier `couleurs.py`.\n",
     "\n",
     "On rappelle que les couleurs sont codées par leur 3 composantes rouge, vert et bleu auxquelles on associe des valeurs comprises entre 0 et 255. La fonction suivante retourne une couleur dans le format attendu par Python à partir de ces 3 composantes.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def get_color(r, g, b):\n",
     "    \"\"\" Retourne une couleur à partir de ses composantes r, g, b entre 0 et 255\"\"\"\n",
     "    return '#{:02x}{:02x}{:02x}'.format(r, g, b)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Cette fonction est à recopier au début de votre programme pour pouvoir l'utiliser ensuite.\n",
     "\n",
@@ -182,11 +266,11 @@
     "\n",
     "\n",
     "\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 5. Fonction undo\n",
     "\n",
@@ -208,11 +292,11 @@
     "**Remarque:** en fait, il vaudrait mieux utiliser la possibilité d'utiliser des \"tags\" sur les objets pour pouvoir grouper les deux lignes d'une croix dans le même tag, et les supprimer ensemble.\n",
     "\n",
     "\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 6. Avec des clics\n",
     "\n",
@@ -223,66 +307,66 @@
     "1. Dans le fichier `clic1.py`, créer une fenêtre graphique qui contient un canevas de taille 500x500 et de couleur noire. Quand on clique sur le canevas, un pixel de couleur rouge s'affiche à l'endroit où l'on a cliqué.\n",
     "\n",
     "\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "2. Copier le contenu du fichier `clic1.py` dans le fichier `clic2.py`. Modifier le fichier `clic2.py` de manière à faire les choses suivantes: \n",
     "    * afficher une ligne verticale en blanc qui sépare l'écran en 2 parties égales\n",
     "    * si l'utilisateur clique à gauche de la ligne afficher un cercle bleu et s'il est à droite, afficher un cercle rouge. Dans les deux cas, le cercle sera centré là où l'utilisateur a cliqué. Le rayon du cercle est 50."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "3. Copier le contenu du fichier `clic2.py` dans le fichier `clic3.py`. Modifier le fichier `clic3.py` de manière à faire les choses suivantes: \n",
     "    * afficher une ligne verticale en blanc qui sépare l'écran en 2 parties égales\n",
     "    * à chaque fois que l'utilisateur a fait 2 clics, s'ils sont du même côté alors afficher une ligne bleue reliant les deux points où l'utilisateur a cliqué, sinon une ligne rouge. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "4. Copier le contenu du fichier `clic3.py` dans le fichier `clic4.py`. Modifier le fichier `clic4.py` de manière à faire les choses suivantes: \n",
     "    * dessiner un carré vide au centre de l'écran (taille et couleur au choix au choix)\n",
     "    * à chaque clic, le carré se remplit et se vide alternativement\n",
     "    * au bout de 10 clics, la fenêtre se ferme (utiliser la fonction `racine.destroy()`)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "5. Copier le contenu du fichier `clic4.py` dans le fichier `clic5.py`. Modifier le fichier `clic5.py` de manière à faire les choses suivantes: \n",
     "    * pour les 8 premiers clics de l'utilisateur, on affiche un cercle rouge centré sur le point cliqué par l'utilisateur, et de rayon 50\n",
     "    * au neuvième clic, tous les cercles deviennent jaunes\n",
     "    * au dizième clic, tous les cercles disparaissent et on recommence au début"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "raw",
-   "metadata": {},
    "source": [
     "Ecrire l'expression qui donne l'avant-dernier chiffre du nombre référencé par la variable `a`."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "raw",
-   "metadata": {},
    "source": [
     "Ecrire l'expression qui donne le dernier chiffre du nombre référencé par la variable `a`."
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.7 64-bit ('l1-python': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -294,7 +378,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
+  },
+  "interpreter": {
+   "hash": "ec862206d8405247e3003360a092d3abf3ebcc1b865015b16225ca27bd9434a9"
   }
  },
  "nbformat": 4,
