--- a/exercises/TD03_fonctions/03_fonctions.ipynb
+++ b/exercises/TD03_fonctions/03_fonctions.ipynb
@@ -366,8 +366,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "def x (liste, 3):\n",
+    "    print()\n"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "x = int.input(\"taille de la matrice\")\n",
+    "def matrice_carree[x]\n",
+    "for i in range (0,x):\n",
+    "    y = int.input(\"ligne\")\n",
+    "print(matrice_carree == int)\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3350440140.py, line 2)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_14668/3350440140.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def matrice_carree[x]\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
