--- a/exercises/TD05_gui/05_gui.ipynb
+++ b/exercises/TD05_gui/05_gui.ipynb
@@ -202,6 +202,44 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "cote=200\n",
+    "racine=tk.Tk()\n",
+    "canvas =tk.Canvas(racine, width=cote, height=500, bg=\"black\")\n",
+    "canvas.grid()\n",
+    "ep=10\n",
+    "canvas.create_oval(0,0,(cote,cote), fill= \"blue\")\n",
+    "canvas.create_oval((ep,ep),(cote-ep, cote-ep), fill=\"green\")\n",
+    "racine.mainloop()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "cote=200\n",
+    "racine=tk.Tk()\n",
+    "canvas =tk.Canvas(racine, width=cote, height=500, bg=\"black\")\n",
+    "canvas.grid()\n",
+    "ep=10\n",
+    "nb_cercle=20\n",
+    "couleurs=[\"blue\", \"green\", \"black\", \"yellow\", \"magenta\", \"red\"]\n",
+    "for i in range (nb_cercle):\n",
+    "    canvas.create_oval((ep*i,ep*i),(cote-ep*i,cote-ep*i),fill=couleurs[i%len(couleurs)])\n",
+    "racine.mainloop()\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## 4. Couleurs\n",
@@ -215,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "source": [
     "def get_color(r, g, b):\n",
     "    \"\"\" Retourne une couleur à partir de ses composantes r, g, b entre 0 et 255\"\"\"\n",
@@ -266,6 +304,70 @@
     "\n",
     "\n",
     "\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import tkinter as tk\n",
+    "import random as rd \n",
+    "\n",
+    "def get_color(r,g,b):\n",
+    "    \"\"\"Retourne une couleur à partir de ses composantes r, g, b entre 0 et 255\"\"\"\n",
+    "    return '#{:02x}{:02x}{:02x}'.format(r, g, b)\n",
+    "\n",
+    "def draw_pixel(i,j,color):\n",
+    "    canvas.create_line((i,j), (i+1, j), fill=color)\n",
+    "\n",
+    "def ecran_aleatoire():\n",
+    "    for i in range (256):\n",
+    "        for j in range(256):\n",
+    "            color=get_color(rd.randint(0,255), rd.randint(0,255), rd.randint(0,255))\n",
+    "            draw_pixel(i,j,color)\n",
+    "\n",
+    "def degrade_gris():\n",
+    "    for i in range(256):\n",
+    "        color=get_color(i,i,i)\n",
+    "        for j in range(256):\n",
+    "            draw_pixel(i,j,color)\n",
+    "\n",
+    "def degradé_2D():\n",
+    "    for i in range(256):\n",
+    "        for j in range (256):\n",
+    "            color= get_color(i,0,j)\n",
+    "            draw_pixel(i, j, color)\n",
+    "\n",
+    "racine=tk.Tk()\n",
+    "#Création des widgets\n",
+    "bouton_aleatoire = tk.Button(racine, text=\"Aleatoire\", fg=\"blue\", bg=\"grey100\", padx=20, font=(\"Times\", \"20\"))\n",
+    "bouton_gris = tk.Button(racine, text=\"Dégradé gris\", fg=\"blue\", bg=\"grey100\", padx=20, font=(\"Times\", \"20\"))\n",
+    "bouton_degrade_2D = tk.Button(racine, text=\"Dégradé 2D\", fg=\"blue\", bg=\"grey100\", padx=20, font=(\"Times\", \"20\"))\n",
+    "canvas = tk.Canvas(racine, width=256, height=256, bg=\"black\")\n",
+    "\n",
+    "#Placement des widgets\n",
+    "bouton_aleatoire.grid(column=0, row=0)\n",
+    "bouton_gris.grid(column=0, row=1)\n",
+    "bouton_degrade_2D.grid(column=0, row=2)\n",
+    "canvas.grid(column=1, row=0, rowspan=3)"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at w.executeCodeCell (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:301310)",
+      "at w.execute (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:300703)",
+      "at w.start (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:296367)",
+      "at runMicrotasks (<anonymous>)",
+      "at processTicksAndRejections (internal/process/task_queues.js:93:5)",
+      "at async t.CellExecutionQueue.executeQueuedCells (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:311160)",
+      "at async t.CellExecutionQueue.start (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:310700)"
+     ]
+    }
    ],
    "metadata": {}
   },
