--- a/cours/06_listes/06_listes.ipynb
+++ b/cours/06_listes/06_listes.ipynb
@@ -2520,6 +2520,22 @@
      "slide_type": "fragment"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def a "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
