--- a/cours/02_structures_conditionnelles/02_Structures_conditionnelles_slides.ipynb
+++ b/cours/02_structures_conditionnelles/02_Structures_conditionnelles_slides.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "meteo = \"froid\" \n",
     "if meteo == \"froid\" : #  vérifie si meteo a \"froid\" comme valeur ou non \n",
@@ -540,7 +540,16 @@
     "    print(\"t-shirt\")\n",
     "print(\"Bonne journée !\") "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3243762281.py, line 5)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_63122/3243762281.py\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    elif meteo == \"froid\" or meteo == \"venteux\" : # sinon vérifie si meteo vaut \"froid\" ou \"venteux\"\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -589,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "envie = \"pizza\"\n",
     "if envie == \"tacos\":\n",
@@ -1200,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "num1 = 2\n",
     "num2 = 1 \n",
@@ -1209,7 +1218,19 @@
     "print(resultat_comparaison)\n",
     "print(\"Fin\")"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'resultat_comparaison' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_63122/2438938174.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mnum1\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mnum2\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mresultat_comparaison\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"num2 est plus grand que num1!\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresultat_comparaison\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Fin\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'resultat_comparaison' is not defined"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1334,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "n = int(input(\"choisir un nombre: \"))\n",
     "if n % 2 == 0:\n",
@@ -1343,7 +1364,15 @@
     "    n = 2 * n\n",
     "print(n)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1352,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "n = int(input(\"choisir un nombre: \"))\n",
     "if n % 2 == 0:\n",
@@ -1361,7 +1390,15 @@
     "    n = 2 * n\n",
     "print(n)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "70\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
