--- a/cours/03_structures_iteratives/03_structures_iteratives.ipynb
+++ b/cours/03_structures_iteratives/03_structures_iteratives.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "for i in range(1, 11, 3) :\n",
     "    print(\"Avant addition i =\", i)\n",
@@ -401,7 +401,24 @@
     "print(\"Dernière valeur, i =\", i)\n",
     "print(\"Terminé\")"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Avant addition i = 1\n",
+      "Après addition i = 2\n",
+      "Avant addition i = 4\n",
+      "Après addition i = 5\n",
+      "Avant addition i = 7\n",
+      "Après addition i = 8\n",
+      "Avant addition i = 10\n",
+      "Après addition i = 11\n",
+      "Dernière valeur, i = 11\n",
+      "Terminé\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -474,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "liste_de_nombres = [23, 43, 56, 22, 109, 34]\n",
     "sum = 0\n",
@@ -483,7 +500,15 @@
     "    sum += nb\n",
     "print(\"La moyenne de\", liste_de_nombres, \"vaut\", sum / len(liste_de_nombres))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "La moyenne de [23, 43, 56, 22, 109, 34] vaut 47.833333333333336\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -598,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "sum = 0\n",
     "i = 1\n",
@@ -606,7 +631,19 @@
     "    sum = sum + i\n",
     "i = i + 1  "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_65268/998866913.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0msum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -814,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "for i in range(1, 21) :\n",
     "    if i % 2 == 0 :\n",
@@ -823,7 +860,25 @@
     "    print(i, \"est impair\")\n",
     "print(\"Terminé\") "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 est impair\n",
+      "3 est impair\n",
+      "5 est impair\n",
+      "7 est impair\n",
+      "9 est impair\n",
+      "11 est impair\n",
+      "13 est impair\n",
+      "15 est impair\n",
+      "17 est impair\n",
+      "19 est impair\n",
+      "Terminé\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -843,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "for i in range(1, 21) :\n",
     "    if i % 2 == 0 :\n",
@@ -851,7 +906,16 @@
     "    print(i, \"est impair\")\n",
     "print(\"Terminé\") "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 est impair\n",
+      "Terminé\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -872,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "source": [
     "cpt = 0\n",
     "while cpt <= 3:\n",
@@ -937,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "source": [
     "for i in range(1, 6):\n",
     "    j = 0\n",
@@ -946,7 +1010,19 @@
     "        j += 1\n",
     "    print(\"\")"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0 \n",
+      "0 1 \n",
+      "0 1 2 \n",
+      "0 1 2 3 \n",
+      "0 1 2 3 4 \n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
