--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -349,20 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "source": [
-    "type (5 == 2)"
+    "type (\"5 == 2\")"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "bool"
+       "str"
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 8
     }
    ],
    "metadata": {}
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "source": [
     "type ((5, 2))"
    ],
@@ -395,7 +395,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 13
     }
    ],
    "metadata": {}
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "source": [
     "u = 2 ** 256\n",
     "u = str(u)\n",
@@ -566,6 +566,28 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "u = 2 ** 256\n",
+    "u = len(u)"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_59347/3985033093.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m256\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "**Note**:  les nombres entiers ont une précision arbitraire."
@@ -574,17 +596,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "source": [
-    "a = 156\n",
-    "print(a%10)"
+    "a = 1565\n",
+    "print(a*2)\n",
+    "\n",
+    "print (str(a)-1)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "6\n"
+      "3130\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_59347/843031967.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
      ]
     }
    ],
@@ -594,6 +629,15 @@
    "cell_type": "raw",
    "source": [
     "Ecrire l'expression qui donne l'avant-dernier chiffre du nombre référencé par la variable `a`."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "raw",
+   "source": [
+    "a = 156\n",
+    "a = str(a)\n",
+    "print (len(a))"
    ],
    "metadata": {}
   },
@@ -886,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "source": [
     "s = input (\"Tape quelque chose au clavier\")\n",
     "print (s)"
@@ -896,7 +940,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1\n"
+      "coucou\n"
      ]
     }
    ],
@@ -913,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "source": [
     "s = input (\"Tape quelque chose au clavier\")\n",
     "print (s*2)"
