--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "source": [
     "num1 = 15\n",
     "num2 = 5\n",
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "source": [
     "day = 0\n",
     "question1 = \"Is your birthday in set 1/?\"\n",
@@ -505,7 +505,7 @@
     "    day += 3\n",
     "\n",
     "question4 = \"Is your birthday in set 4/ ?\"\n",
-    "answer int(input(question4))\n",
+    "answer = int(input(question4))\n",
     "\n",
     "if answer == 1:\n",
     "    day += 4\n",
@@ -520,9 +520,9 @@
     {
      "output_type": "error",
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (4188489426.py, line 21)",
+     "evalue": "invalid syntax (3752780437.py, line 27)",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_24526/4188489426.py\"\u001b[0;36m, line \u001b[0;32m21\u001b[0m\n\u001b[0;31m    answer int(input(question4))\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_64295/3752780437.py\"\u001b[0;36m, line \u001b[0;32m27\u001b[0m\n\u001b[0;31m    answer int(input(question5))\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -657,17 +657,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
-    "\n"
+    "x = \"coucou\"\n",
+    "print(len(x))"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2739542331.py, line 2)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_30938/2739542331.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print len(m)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6\n"
      ]
     }
    ],
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "source": [
     "import random\n",
     "for n in range (1) :\n",
@@ -755,7 +755,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "92\n",
+      "0\n",
       "Plus petit\n"
      ]
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "source": [
     "a = int(input(\"saisir un premier nombre entier positif ou négatif\"))\n",
     "b = int(input(\"saisir un deuxième nombre entier positif ou négatif\"))\n",
