--- a/cours/06_listes/06_listes.ipynb
+++ b/cours/06_listes/06_listes.ipynb
@@ -69,12 +69,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "# Liste mixte\n",
-    "mixte = [7, \"tennis\", True, 5.3]"
+    "mixte = [7, \"tennis\", True, 5.3]\n",
+    "print(mixte)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[7, 'tennis', True, 5.3]\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -107,12 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "liste = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "print(\"La liste contient\", len(liste), \"éléments.\")"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "La liste contient 10 éléments.\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -121,11 +138,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "len([5.3, -0.1, 4.5, 7.7])"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -145,12 +173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "chaine = 'abracadabra'\n",
     "print(len(chaine))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -198,14 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "liste = [\"bus\", \"voiture\", \"vélo\", \"trotinette\"]\n",
     "\n",
     "print(liste[0])\n",
     "print(liste[2])"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "bus\n",
+      "vélo\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -225,11 +270,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "print(liste[4])"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_75355/3130820008.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mliste\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -262,14 +319,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "source": [
     "liste = [\"bus\", \"voiture\", \"vélo\", \"trotinette\"]\n",
     "print(liste[-1])\n",
     "print(liste[-2])\n",
     "print(liste[0],liste[-4])"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "trotinette\n",
+      "vélo\n",
+      "bus bus\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -308,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "source": [
     "liste = [2, 3, 5, 7, 11, 13, 17, 19, 21, 23]"
    ],
@@ -321,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "source": [
     "print(liste[2:6])\n",
     "print(liste[-8:-4])"
@@ -344,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "source": [
     "liste[3:]"
    ],
@@ -357,7 +424,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 11
     }
    ],
    "metadata": {
@@ -392,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "source": [
     "liste[:-3]"
    ],
@@ -405,7 +472,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 12
     }
    ],
    "metadata": {
@@ -440,12 +507,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "liste = [2, 3, 5, 7, 11, 13, 17, 19, 21, 23]\n",
     "liste[2:8:2]"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[5, 11, 17]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -454,11 +532,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "source": [
     "liste[::3] "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2, 7, 17, 23]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -467,12 +556,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "source": [
     "liste[::-2]\n",
     "liste[::11]"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -492,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "source": [
     "def inverseListe (l):\n",
     "    \"\"\"Renvoie une liste dont les éléments sont les éléments de l dans l'ordre inverse\"\"\"\n",
@@ -500,7 +600,18 @@
     "\n",
     "inverseListe([1,2,3,4,5])"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[5, 4, 3, 2, 1]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -509,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "source": [
     "def inverser_liste(l) :\n",
     "    \"\"\"Fonction qui prend en entrée une liste et qui renvoie la liste renversée.\"\"\"\n",
@@ -519,7 +630,15 @@
     "l_inverse = inverser_liste(l)\n",
     "print(l_inverse)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -542,13 +661,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "source": [
     "# Générer une liste d'entiers de 1 à 9\n",
     "print(list(range(1, 10)))\n",
     "print(range(1,10))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "range(1, 10)\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -583,12 +711,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "source": [
     "m = int(input(\"Pour quel entier voulez-vous voir la table de multiplication ?\"))\n",
     "print(list(m*i for i in range(11)))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -614,12 +750,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "source": [
     "capitales = [\"Paris\", \"Berlin\", \"Madrid\", \"Athènes\", \"Zagreb\", \"Rome\", \"Amsterdam\"]\n",
     "print(capitales)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Paris', 'Berlin', 'Madrid', 'Athènes', 'Zagreb', 'Rome', 'Amsterdam']\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -639,12 +783,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "source": [
     "capitales[2] = \"Copenhague\"\n",
     "print(capitales)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Paris', 'Berlin', 'Copenhague', 'Athènes', 'Zagreb', 'Rome', 'Amsterdam']\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -664,13 +816,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "source": [
     "capitales = [\"Paris\", \"Berlin\", \"Madrid\", \"Athènes\", \"Zagreb\", \"Rome\", \"Amsterdam\"]\n",
     "capitales[4:7] = [\"Dublin\", \"Budapest\", \"Vienne\"]\n",
     "print(capitales)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Paris', 'Berlin', 'Madrid', 'Athènes', 'Dublin', 'Budapest', 'Vienne']\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -764,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "source": [
     "capitales1 = [\"Paris\", \"Berlin\", \"Madrid\", \"Athènes\", \"Zagreb\", \"Rome\"]\n",
     "capitales2 = [\"Bruxelles\", \"Oslo\"]\n",
@@ -772,7 +932,16 @@
     "print(capitales1 + capitales2)\n",
     "print(capitales1)  "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Paris', 'Berlin', 'Madrid', 'Athènes', 'Zagreb', 'Rome', 'Bruxelles', 'Oslo']\n",
+      "['Paris', 'Berlin', 'Madrid', 'Athènes', 'Zagreb', 'Rome']\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -822,13 +991,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "source": [
     "capitales = [\"Paris\", \"Berlin\", \"Madrid\", \"Athènes\", \"Zagreb\", \"Rome\"]\n",
     "del capitales[1]\n",
     "print(capitales)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Paris', 'Madrid', 'Athènes', 'Zagreb', 'Rome']\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -850,13 +1027,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "source": [
     "capitales = [\"Paris\", \"Berlin\", \"Madrid\", \"Athènes\", \"Zagreb\", \"Rome\"]\n",
     "capitales.remove(\"Madrid\")\n",
     "print(capitales)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Paris', 'Berlin', 'Athènes', 'Zagreb', 'Rome']\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -865,14 +1050,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "source": [
     "nombres = [1, 3, 3, 5, 4, 6, 7, 3]\n",
     "print(nombres)\n",
     "nombres.remove(3)\n",
     "print(nombres)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 3, 3, 5, 4, 6, 7, 3]\n",
+      "[1, 3, 5, 4, 6, 7, 3]\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -939,13 +1133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "source": [
     "nombres = [5, 3, 7, 4, 10, 9, 1]\n",
     "nombres.reverse()\n",
     "print(nombres)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 9, 10, 4, 7, 3, 5]\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -965,13 +1167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "source": [
     "nombres = [1,3,3,6,2,5,7,2,3,4,3,2,3]\n",
     "print(nombres.count(3))\n",
     "print(nombres.count(2))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5\n",
+      "3\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -994,14 +1205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "source": [
     "liste = [1, 2, 3]\n",
     "liste2 = liste.append(4)\n",
     "print(liste)\n",
     "print(liste2)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "None\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1063,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "source": [
     "def compter_negatives(nombres) :\n",
     "    \"\"\"Renvoie le nombre d'éléments < 0 de la liste passée en paramètre. \"\"\"\n",
@@ -1123,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "source": [
     "def compter_negatives(nombres) :\n",
     "    \"\"\"Renvoie le nombre d'éléments < 0 de la liste passée en paramètre. \"\"\"\n",
@@ -1133,7 +1353,18 @@
     "\n",
     "compter_negatives([3, -1, 1.5, 5, -6.3, -7.9, 2])"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -1155,13 +1386,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "source": [
     "L = [3, 5, 1, 7, 14, 2]\n",
     "L2 = sorted(L)\n",
     "print(L2)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 5, 7, 14]\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1181,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "source": [
     "L2 = sorted(L, reverse=False)\n",
     "print(L2)\n",
@@ -1189,7 +1428,16 @@
     "L2 = sorted(L, reverse=True)\n",
     "print(L2)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 5, 7, 14]\n",
+      "[14, 7, 5, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1442,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "source": [
     "L1 = [1, 2, 3, 4, 5, 6]\n",
     "L2 = list(L1)\n",
@@ -1452,7 +1700,17 @@
     "print(L2)\n",
     "print(L1)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1513,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "source": [
     "L1 = [1, 2, 3, 4, 5, 6]\n",
     "L2 = L1.copy()\n",
@@ -1523,7 +1781,17 @@
     "print(L2)\n",
     "print(L1)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1543,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "source": [
     "L1 = [1, 2, 3, 4, 5, 6]\n",
     "L2 = L1[:]\n",
@@ -1553,7 +1821,17 @@
     "print(L2)\n",
     "print(L1)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1575,14 +1853,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "source": [
     "nombres = [1, 3, 5, 7, 9, 11]\n",
     "print(3 in nombres)\n",
     "print(2 in nombres)\n",
     "print(5 in nombres and 7 in nombres)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
