--- a/exercises/TD05_gui/05_gui.ipynb
+++ b/exercises/TD05_gui/05_gui.ipynb
@@ -50,9 +50,9 @@
     "CANVAS_WIDTH, CANVAS_HEIGHT = 600, 400\n",
     "\n",
     "\n",
-    "root = Tk()\n",
+    "root = tk()\n",
     "\n",
-    "canvas = Canvas(root, width = CANVAS_WIDTH, height = CANVAS_HEIGHT)\n",
+    "canvas = canvas(root, width = CANVAS_WIDTH, height = CANVAS_HEIGHT)\n",
     "\n",
     "    # Début de votre code\n",
     "x = CANVAS_WIDTH / 2\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "source": [
     "import tkinter as tk\n",
     "import random as rd\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "source": [
     "import tkinter as tk\n",
     "\n",
@@ -216,12 +216,27 @@
     "canvas.create_oval((ep,ep),(cote-ep, cote-ep), fill=\"green\")\n",
     "racine.mainloop()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at w.executeCodeCell (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:301310)",
+      "at w.execute (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:300703)",
+      "at w.start (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:296367)",
+      "at processTicksAndRejections (internal/process/task_queues.js:93:5)",
+      "at async t.CellExecutionQueue.executeQueuedCells (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:311160)",
+      "at async t.CellExecutionQueue.start (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:310700)"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "source": [
     "import tkinter as tk\n",
     "\n",
@@ -230,7 +245,7 @@
     "canvas =tk.Canvas(racine, width=cote, height=500, bg=\"black\")\n",
     "canvas.grid()\n",
     "ep=10\n",
-    "nb_cercle=20\n",
+    "nb_cercle=15\n",
     "couleurs=[\"blue\", \"green\", \"black\", \"yellow\", \"magenta\", \"red\"]\n",
     "for i in range (nb_cercle):\n",
     "    canvas.create_oval((ep*i,ep*i),(cote-ep*i,cote-ep*i),fill=couleurs[i%len(couleurs)])\n",
@@ -309,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "import tkinter as tk\n",
     "import random as rd \n",
@@ -333,7 +348,7 @@
     "        for j in range(256):\n",
     "            draw_pixel(i,j,color)\n",
     "\n",
-    "def degradé_2D():\n",
+    "def degrade_2D():\n",
     "    for i in range(256):\n",
     "        for j in range (256):\n",
     "            color= get_color(i,0,j)\n",
@@ -352,23 +367,7 @@
     "bouton_degrade_2D.grid(column=0, row=2)\n",
     "canvas.grid(column=1, row=0, rowspan=3)"
    ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "Error",
-     "evalue": "Session cannot generate requests",
-     "traceback": [
-      "Error: Session cannot generate requests",
-      "at w.executeCodeCell (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:301310)",
-      "at w.execute (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:300703)",
-      "at w.start (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:296367)",
-      "at runMicrotasks (<anonymous>)",
-      "at processTicksAndRejections (internal/process/task_queues.js:93:5)",
-      "at async t.CellExecutionQueue.executeQueuedCells (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:311160)",
-      "at async t.CellExecutionQueue.start (/Users/inesradelet/.vscode/extensions/ms-toolsai.jupyter-2021.8.2041215044/out/client/extension.js:52:310700)"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -413,6 +412,37 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "def drawn_pixel(event):\n",
+    "    canvas.create_line((event.x, event.y), (event.x+1, event.y), fill=\"yellow\")\n",
+    "\n",
+    "racine = tk.Tk()\n",
+    "canvas = tk.Canvas(racine, width=500, height=500, bg=\"black\")\n",
+    "canvas.bind(\"<Button-1>\", draw_pixel)\n",
+    "canvas.grid()\n",
+    "racine.mainloop() # Lancement de la boucle principale"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_77005/1425246528.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mcanvas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"<Button-1>\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw_pixel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mcanvas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mracine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmainloop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Lancement de la boucle principale\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/miniconda3/envs/l1-python/lib/python3.9/tkinter/__init__.py\u001b[0m in \u001b[0;36mmainloop\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m   1427\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmainloop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1428\u001b[0m         \u001b[0;34m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1429\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmainloop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1430\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1431\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mquit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "2. Copier le contenu du fichier `clic1.py` dans le fichier `clic2.py`. Modifier le fichier `clic2.py` de manière à faire les choses suivantes: \n",
@@ -428,6 +458,13 @@
     "    * afficher une ligne verticale en blanc qui sépare l'écran en 2 parties égales\n",
     "    * à chaque fois que l'utilisateur a fait 2 clics, s'ils sont du même côté alors afficher une ligne bleue reliant les deux points où l'utilisateur a cliqué, sinon une ligne rouge. "
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
